--- a/wa-data/public/shop/themes/your_shop/head.html
+++ b/wa-data/public/shop/themes/your_shop/head.html
@@ -72,7 +72,7 @@
     <!-- "nofollow" for pages not to be indexed, e.g. customer account -->
     <meta name="robots" content="noindex,nofollow" />
 {/if}
-
+<link rel="icon" type="image/png" href="favicon.png" />
 <!-- plugin hook: 'frontend_head' -->
 {* @event frontend_head.%plugin_id% *}
 {foreach $frontend_head as $_}{$_}{/foreach}
