Настройки на боеевом сервере

--- a/wa-data/public/shop/themes/your_shop/category.html
+++ b/wa-data/public/shop/themes/your_shop/category.html
@@ -143,3 +143,5 @@
     <div class="clear-both"></div>
 </div>
 {if !empty($theme_settings.sidebar_catalog)}{$wa->globals('hasSidebar', 1)}{/if}
+<!--Мух-->
+{$category.additional_description|default:''}
